# attitudepy

./: .gitignore  README.md  assignment_data.py  eulangles_plotting.py  main.py  plotting_utils.py  pyproject.toml
attitudepy/: __init__.py  attitude_class.py  blocks.py  controller.py  dynamics.py  integration.py  spacecraft_class.py
