[tool.poetry]
name = "attitudepy"
version = "0.1.0"
description = "Package for spacecraft attitude dynamics and control"
authors = ["Francesco Bondini <bondini.francesco.vr@gmail.com>"]
readme = "README.md"
packages = [{ include = "attitudepy" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
scipy = "^1.15.2"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
